<resources>
    <string name="app_name">Ideas Collector</string>
    <string name="project_title">Project</string>
    <string name="project_add">Add</string>
    <string name="project_name">Project Name</string>
    <string name="block_name">Block Name</string>
    <string name="block_idea">Block Ideas</string>
    <string name="empty_input">Input is empty</string>
    <string name="block">Block</string>
    <string name="draft">Draft</string>
    <string name="source">Source</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="text">Text</string>
    <string name="empty">List is empty</string>
    <string name="none">None</string>
    <string name="main_topic">Main Topic</string>
    <string name="sub_topic">Subtopic</string>
    <string name="explain">Explain</string>
    <string name="analyze">Analyze</string>
    <string name="example">Example</string>
    <string name="type">Type</string>
    <string name="reference">Reference</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="year">Year</string>
    <string name="own_idea">Own Idea</string>
    <string name="quote">Quote</string>
    <string name="paraphrase">Paraphrase</string>
    <string name="add_or_write_idea">Write your idea or reference from draft and internet idea</string>
    <string name="write_idea">Write your idea</string>
    <string name="add_idea">Add the internet idea</string>
    <string name="paraphrase_idea">Paraphrase internet idea</string>

    <string-array name="dropdown_type_list">
        <item>None</item>
        <item>Main Topic</item>
        <item>Subtopic</item>
        <item>Explain</item>
        <item>Proof</item>
        <item>Analyze</item>
        <item>Example</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>