<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ideas_navigation"
    app:startDestination="@id/blockFragment">

    <fragment
        android:id="@+id/draftFragment"
        android:name="com.example.customapp.fragment.draft.DraftFragment"
        android:label="@string/draft"
        tools:layout="@layout/fragment_draft" />
    <fragment
        android:id="@+id/blockFragment"
        android:name="com.example.customapp.fragment.block.BlockFragment"
        android:label="@string/block"
        tools:layout="@layout/fragment_block" />
    <fragment
        android:id="@+id/sourceFragment"
        android:name="com.example.customapp.fragment.source.SourceFragment"
        android:label="@string/source"
        tools:layout="@layout/fragment_source" />
</navigation>