<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_edit_block_ideas_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_700"
        android:gravity="top"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/type_add_edit_block_ideas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/type" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/dropdown_box">

                    <Spinner
                        android:id="@+id/type_spinner_block_ideas"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:entries="@array/dropdown_type_list" />
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/reference_add_edit_block_ideas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/reference" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/dropdown_box">

                    <Spinner
                        android:id="@+id/reference_spinner_block_ideas"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:entries="@array/dropdown_type_list" />
                </RelativeLayout>
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/own_idea_block_ideas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/own_idea"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/quote_block_ideas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quote" />

                <RadioButton
                    android:id="@+id/paraphrase_block_ideas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paraphrase" />
            </RadioGroup>

            <TextView
                android:id="@+id/text_add_edit_block_ideas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/text"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/text_input_block_ideas"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="5"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/add_or_write_idea"/>

            <Button
                android:id="@+id/save_edit_button_block_ideas"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="25sp"
                android:backgroundTint="@color/save"
                android:textColor="@color/secondaryDarkColor"
                android:text="Button" />

            <Button
                android:id="@+id/delete_button_block_ideas"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="140dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/alert"
                android:text="@string/delete" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>