<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_edit_internet_ideas_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/purple_700"
        android:gravity="top"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/name_add_edit_internet_ideas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name_input_internet_ideas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_add_edit_internet_ideas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/text"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/text_input_internet_ideas"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="5"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/add_idea"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/paraphrase_add_edit_internet_ideas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paraphrase"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/paraphrase_input_internet_ideas"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="5"
                android:ems="10"
                android:visibility="gone"
                android:hint="@string/paraphrase_idea"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:background="@color/dropdown_box"/>

            <Button
                android:id="@+id/save_edit_internet_ideas"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="25sp"
                android:backgroundTint="@color/save"
                android:textColor="@color/secondaryDarkColor"
                android:text="Button" />

            <Button
                android:id="@+id/delete_internet_ideas"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:backgroundTint="@color/white"
                android:textColor="@color/alert"
                android:text="@string/delete" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>